Prevented overflow on mobile
Decreased the location of the page content by a bit so that you don't need to scroll on mobile

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 90vh;
     color: var(--text-color);
     transition: background-color 0.3s, color 0.3s;
 }
